Fixed some style issues surrounding the page title on mobile. Added link to title that returns to main page.

--- a/styles/main.css
+++ b/styles/main.css
@@ -145,9 +145,14 @@ input[type=text]:focus {
 }
 
 .title {
+    display: inline-block;
     font-size: 2em;
-    font-family: "bebas_neuebold";
-    padding-top: 40px;
+    font-family: "bebas_neuebold", sans-serif;
+    margin-top: 2% !important;
+}
+
+.title:hover {
+    cursor:pointer;
 }
 
 /* Generic */
